# esvr2

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _esvr2_8cpp.html  _esvr2_8h.html  _esvr2_8h_source.html  _esvr2_black_magic_video_loader_8cpp.html  _esvr2_black_magic_video_loader_8h.html  _esvr2_black_magic_video_loader_8h_source.html  _esvr2_component_8h.html  _esvr2_component_8h_source.html  _esvr2_controller_8cpp.html  _esvr2_controller_8h.html  _esvr2_controller_8h_source.html  _esvr2_foot_pedal_8cpp.html  _esvr2_foot_pedal_8h.html  _esvr2_foot_pedal_8h_source.html  _esvr2_game_state_8cpp.html  _esvr2_game_state_8h.html  _esvr2_game_state_8h_source.html  _esvr2_graphics_system_8cpp.html  _esvr2_graphics_system_8h.html  _esvr2_graphics_system_8h_source.html  _esvr2_helper_8cpp.html  _esvr2_helper_8h.html  _esvr2_helper_8h_source.html  _esvr2_interactive_element2_d_8cpp.html  _esvr2_interactive_element2_d_8h.html  _esvr2_interactive_element2_d_8h_source.html  _esvr2_interactive_element2_d_def_8h.html  _esvr2_interactive_element2_d_def_8h_source.html  _esvr2_interactive_element_8cpp.html  _esvr2_interactive_element_8h.html  _esvr2_interactive_element_8h_source.html  _esvr2_laparoscope_controller_8cpp.html  _esvr2_laparoscope_controller_8h.html  _esvr2_laparoscope_controller_8h_source.html  _esvr2_low_latency_video_loader_8cpp.html  _esvr2_low_latency_video_loader_8h.html  (+161 more)
CMake/Dependencies/: OGRE.cmake
CMake/Templates/: Plugins.cfg.in  Resources.cfg.in
CMake/Utils/: FindPkgMacros.cmake  PreprocessorUtils.cmake
compositors/: StereoRendering.compositor
config/: CAMERA_CONFIG_Endoscope.cfg  GENERAL_Example.cfg  HMD_Vive.cfg  general.yml  hmd_vive.yml  left.yaml  left1920x1080_2.yaml  right.yaml  right1920x1080_2.yaml
include/: Esvr2BlackMagicVideoLoader.h  Esvr2GameState.h  Esvr2GraphicsSystem.h  Esvr2LowLatencyVideoLoader.h  Esvr2OpenCvVideoLoader.h  Esvr2OpenVRCompositorListener.h  Esvr2ParseYml.h  Esvr2PoseState.h  Esvr2ROSNode.h  Esvr2StereoRendering.h  Esvr2VideoLoader.h  OpenVRCompositorListener.h  ParseYml.h  PointCloud.h  StereoRendering.h  StereoRenderingGameState.h  StereoRenderingGraphicsSystem.h  StereoRenderingOpenCvVideoLoader.h  StereoRenderingROSNode.h  StereoRenderingVideoLoader.h
include/esvr2/: Esvr2.h  Esvr2Barrier.h  Esvr2BlackMagicVideoLoader.h  Esvr2Component.h  Esvr2Controller.h  Esvr2FootPedal.h  Esvr2GameState.h  Esvr2GraphicsSystem.h  Esvr2Helper.h  Esvr2InteractiveElement.h  Esvr2InteractiveElement2D.h  Esvr2InteractiveElement2DDef.h  Esvr2KeyboardController.h  Esvr2LaparoscopeController.h  Esvr2LowLatencyVideoLoader.h  Esvr2NoneVideoLoader.h  Esvr2OpenCvVideoLoader.h  Esvr2OpenVRCompositorListener.h  Esvr2Opt0Controller.h  Esvr2Opt1Controller.h  Esvr2Opt2Controller.h  Esvr2ParseYml.h  Esvr2PointCloud.h  Esvr2PoseState.h  Esvr2SettingsEventLog.h  Esvr2TestPose.h  Esvr2VideoLoader.h
include/esvr2/v4l2/: v4l2_interface.h
media/: Floor.material  FreeSans.fontdef  InteractiveElementsDef.yaml  StereoRendering.compositor  pointcloud.material
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+79 more)
src/: Esvr2BlackMagicVideoLoader.cpp  Esvr2GameState.cpp  Esvr2GraphicsSystem.cpp  Esvr2LowLatencyVideoLoader.cpp  Esvr2Main.cpp  Esvr2OpenCvVideoLoader.cpp  Esvr2OpenVRCompositorListener.cpp  Esvr2ParseYml.cpp  Esvr2Pointcloud.cpp  Esvr2PoseState.cpp  Esvr2ROSNode.cpp  Esvr2StereoRendering.cpp  Esvr2TestPose.cpp  Esvr2VideoLoader.cpp  OpenVRCompositorListener.cpp  ParseYml.cpp  PointCloud.cpp  StereoRendering.cpp  StereoRenderingGameState.cpp  StereoRenderingGraphicsSystem.cpp  StereoRenderingOpenCvVideoLoader.cpp  StereoRenderingROSNode.cpp  StereoRenderingVideoLoader.cpp
src/esvr2/: Esvr2.cpp  Esvr2Barrier.cpp  Esvr2BlackMagicVideoLoader.cpp  Esvr2Controller.cpp  Esvr2FootPedal.cpp  Esvr2GameState.cpp  Esvr2GraphicsSystem.cpp  Esvr2Helper.cpp  Esvr2InteractiveElement.cpp  Esvr2InteractiveElement2D.cpp  Esvr2KeyboardController.cpp  Esvr2LaparoscopeController.cpp  Esvr2LowLatencyVideoLoader.cpp  Esvr2OpenCvVideoLoader.cpp  Esvr2OpenVRCompositorListener.cpp  Esvr2Opt0Controller.cpp  Esvr2Opt1Controller.cpp  Esvr2Opt2Controller.cpp  Esvr2ParseYml.cpp  Esvr2Pointcloud.cpp  Esvr2PoseState.cpp  Esvr2SettingsEventLog.cpp  Esvr2TestPose.cpp  Esvr2VideoLoader.cpp
src/v4l2/: v4l2_interface.cpp
