<?xml version="1.0"?>
<package>
  <name>esvr2</name>
  <version>0.0.1</version>
  <description>
    jet another stereo camera project towards openVR
  </description>
  <maintainer email="s1856172@mail.zih.tu-dresden.de">Peter Klausing</maintainer>
  <license>GPLv3</license>

  <url type="repository">https://github.com/peetCreative/esvr2</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>

</package>
